# imessage

./: LICENSE  README.md  pyMessage.py  setup.cfg
src/imessage/: __init__.py  imessage.py
