[metadata]
name = imessage
version = 0.0.2
author = Will Mason Moses
author_email = author@example.com
description = A small package to export an iMessage database as a pandas dataframe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/willmmoses/imessage
project_urls =
    Bug Tracker = https://github.com/willmmoses/imessage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src